src/test/ui/marker_trait_attr/region-overlap.stderr
error[E0283]: type annotations needed
  --> $DIR/region-overlap.rs:5:10
   |
LL | impl<'a> A for (&'static (), &'a ()) {}
   |          ^ cannot infer type for tuple `(&'static (), &'a ())`
   |
note: multiple `impl`s satisfying `(&'static (), &'a ()): A` found
  --> $DIR/region-overlap.rs:5:1
   |
LL | impl<'a> A for (&'static (), &'a ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | impl<'a> A for (&'a (), &'static ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `A`
  --> $DIR/region-overlap.rs:4:1
   |
LL | trait A {}
   | ^^^^^^^ required by this bound in `A`

error[E0283]: type annotations needed
  --> $DIR/region-overlap.rs:6:10
   |
LL | impl<'a> A for (&'a (), &'static ()) {}
   |          ^ cannot infer type for tuple `(&'a (), &'static ())`
   |
note: multiple `impl`s satisfying `(&'a (), &'static ()): A` found
  --> $DIR/region-overlap.rs:5:1
   |
LL | impl<'a> A for (&'static (), &'a ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | impl<'a> A for (&'a (), &'static ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `A`
  --> $DIR/region-overlap.rs:4:1
   |
LL | trait A {}
   | ^^^^^^^ required by this bound in `A`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
